<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/LBRecylerView"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Button
        android:id="@+id/home_button6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:backgroundTint="@color/lightGreen"
        android:text="Home"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/stocksRecycler"
        android:layout_width="350dp"
        android:layout_height="600dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="11dp"
        android:layout_marginEnd="31dp"
        android:layout_marginBottom="10dp"
        app:layout_constraintBottom_toTopOf="@+id/home_button6"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/LeaderboardText" />

    <TextView
        android:id="@+id/LeaderboardText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="170dp"
        android:layout_marginTop="35dp"
        android:layout_marginEnd="161dp"
        android:layout_marginBottom="12dp"
        android:text="Leaderboard"
        app:layout_constraintBottom_toTopOf="@+id/stocksRecycler"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/refresh_leaderboard"
        android:layout_width="55dp"
        android:layout_height="54dp"
        android:layout_marginStart="83dp"
        android:layout_marginTop="29dp"
        android:layout_marginEnd="31dp"
        android:contentDescription="Refresh the Leaderboard..."
        app:layout_constraintBottom_toTopOf="@+id/stocksRecycler"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/LeaderboardText"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0"
        app:srcCompat="@drawable/baseline_refresh_24" />


</androidx.constraintlayout.widget.ConstraintLayout>