<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/stkName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="17dp"
        android:text="AMZN"
        android:textSize="48sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.jjoe64.graphview.GraphView
        android:id="@+id/idGraphView"
        android:layout_width="198dp"
        android:layout_height="215dp"
        android:layout_marginStart="106dp"
        android:layout_marginTop="9dp"
        android:layout_marginEnd="107dp"
        android:layout_marginBottom="28dp"
        app:layout_constraintBottom_toTopOf="@+id/textView3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/stkName" />

    <TextView
        android:id="@+id/price"
        android:layout_width="143dp"
        android:layout_height="45dp"
        android:layout_marginTop="27dp"
        android:text="$1000.00"
        android:textSize="34sp"
        app:layout_constraintEnd_toStartOf="@+id/changeInPrice"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/changeInPrice"
        android:layout_width="72dp"
        android:layout_height="72dp"
        android:layout_marginTop="17dp"
        android:layout_marginEnd="15dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/baseline_neutral_24" />

    <Button
        android:id="@+id/buyStocks"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="141dp"
        android:layout_marginTop="57dp"
        android:layout_marginEnd="142dp"
        android:text="Buy Stocks"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/numStocks" />

    <Button
        android:id="@+id/sellStocks"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="139dp"
        android:layout_marginEnd="139dp"
        android:layout_marginBottom="40dp"
        android:text="Sell Stocks"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buyStocks" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="67dp"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="66dp"
        android:gravity="center"
        android:text="You currently have 0 Stocks in this Company."
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/idGraphView" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="67dp"
        android:layout_marginTop="6dp"
        android:layout_marginEnd="66dp"
        android:layout_marginBottom="9dp"
        android:gravity="center"
        android:text="You currently have $1000."
        app:layout_constraintBottom_toTopOf="@+id/numStocks"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <EditText
        android:id="@+id/numStocks"
        android:layout_width="241dp"
        android:layout_height="63dp"
        android:layout_marginStart="100dp"
        android:layout_marginTop="34dp"
        android:layout_marginEnd="101dp"
        android:ems="10"
        android:hint="Insert Number Here:"
        android:inputType="number"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <Button
        android:id="@+id/home_button7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="16dp"
        android:text="Home"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/stocks_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="17dp"
        android:layout_marginBottom="16dp"
        android:text="Stocks"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>