<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageButton
        android:id="@+id/refresh_stocks"
        android:layout_width="55dp"
        android:layout_height="54dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="31dp"
        android:contentDescription="Refresh the stocks..."
        app:layout_constraintBottom_toTopOf="@+id/stocksRecycler"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/baseline_refresh_24" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/stocksRecycler"
        android:layout_width="350dp"
        android:layout_height="600dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="66dp"
        android:layout_marginEnd="31dp"
        android:layout_marginBottom="10dp"
        app:layout_constraintBottom_toTopOf="@+id/home_button3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/home_button3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:backgroundTint="@color/lightGreen"
        android:text="Home"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/StocksText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="184dp"
        android:layout_marginTop="29dp"
        android:layout_marginEnd="99dp"
        android:layout_marginBottom="17dp"
        android:text="Stocks"
        app:layout_constraintBottom_toTopOf="@+id/stocksRecycler"
        app:layout_constraintEnd_toStartOf="@+id/refresh_stocks"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>