...
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <Button
        android:id="@+id/toLogin"
        android:layout_width="206dp"
        android:layout_height="72dp"
        android:layout_marginStart="102dp"
        android:layout_marginEnd="103dp"
        android:layout_marginBottom="28dp"
        android:text="Create a new account"
...
        android:gravity="center"
        android:text="Cannot access BLANK due to Guest Access. To access BLANK, create a new account or login."
        android:textSize="34sp"
        app:layout_constraintBottom_toTopOf="@+id/toLogin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toMain" />

    <ImageView
        android:id="@+id/toMain"
        android:layout_width="74dp"
        android:layout_height="68dp"
        app:layout_constraintStart_toStartOf="parent"
...
